--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="colorPrimaryDark">@color/marvelRed</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="font">@font/marvel</item>
+        <item name="android:textColor">#FFFFFF</item>
     </style>
 
 </resources>
