--- a/app/src/main/res/layout/fragment_final_screen.xml
+++ b/app/src/main/res/layout/fragment_final_screen.xml
@@ -14,41 +14,39 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/marvel"
         android:textColor="#FFFFFF"
-        android:textSize="80sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="60sp"
+        android:layout_margin="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.158" />
+        app:layout_constraintBottom_toTopOf="@id/final_screen_hero_image_view"/>
+
+    <ImageView
+        android:id="@+id/final_screen_hero_image_view"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:contentDescription="@string/image_of_the_winner"
+        android:scaleType="centerInside"
+        android:src="@drawable/ant_man"
+        app:layout_constraintBottom_toTopOf="@id/final_screen_replay_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/final_screen_title_text_view" />
+
 
     <Button
         android:id="@+id/final_screen_replay_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="30dp"
         android:width="150sp"
         android:background="@drawable/btn_rounded"
         android:fontFamily="@font/marvel"
-        android:gravity="center"
         android:text="@string/replay"
         android:textColor="#FFB751"
         android:textSize="36sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/final_screen_hero_image_view" />
-
-    <ImageView
-        android:id="@+id/final_screen_hero_image_view"
-        android:layout_width="300dp"
-        android:layout_height="400dp"
-        android:src="@drawable/ant_man"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/final_screen_title_text_view"
-        app:layout_constraintVertical_bias="0.082" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
