[GAME] continue game development :)

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="transparentGray">#C9454142</color>
     <color name="looseGray">#BB808080</color>
     <color name="marvelRed">#DB0430</color>
+    <color name="reRollDice">#BBFF0000</color>
 </resources>
