--- a/app/src/main/res/layout-land/fragment_select_fighter.xml
+++ b/app/src/main/res/layout-land/fragment_select_fighter.xml
@@ -12,43 +12,48 @@
         android:id="@+id/select_fighter_name_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
         android:fontFamily="@font/marvel"
+        android:text="@string/ant_man"
         android:textColor="#FFFFFF"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/select_fighter_center_image_view" />
-
-    <ImageView
-        android:id="@+id/select_fighter_center_image_view"
-        android:layout_width="280dp"
-        android:layout_height="350dp"
-        android:contentDescription="@string/img_desc_card_fighter"
-        android:src="@drawable/ant_man"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/select_fighter_right_image_view"
-        android:layout_width="280dp"
-        android:layout_height="350dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:contentDescription="@string/img_desc_card_fighter"
         android:src="@drawable/aquaman"
         app:layout_constraintBottom_toBottomOf="@+id/select_fighter_center_image_view"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/select_fighter_center_image_view"
-        app:layout_constraintTop_toTopOf="@+id/select_fighter_center_image_view" />
+        app:layout_constraintTop_toTopOf="@+id/select_fighter_center_image_view"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <ImageView
+        android:id="@+id/select_fighter_center_image_view"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:contentDescription="@string/img_desc_card_fighter"
+        android:src="@drawable/ant_man"
+        app:layout_constraintBottom_toTopOf="@+id/select_fighter_choose_button"
+        app:layout_constraintEnd_toStartOf="@id/select_fighter_right_image_view"
+        app:layout_constraintStart_toEndOf="@id/select_fighter_left_image_view"
+        app:layout_constraintTop_toBottomOf="@+id/select_fighter_name_text_view" />
 
     <ImageView
         android:id="@+id/select_fighter_left_image_view"
-        android:layout_width="280dp"
-        android:layout_height="350dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:contentDescription="@string/img_desc_card_fighter"
         android:src="@drawable/batman"
         app:layout_constraintBottom_toBottomOf="@id/select_fighter_center_image_view"
         app:layout_constraintEnd_toStartOf="@+id/select_fighter_center_image_view"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/select_fighter_center_image_view" />
 
     <ImageButton
@@ -59,9 +64,9 @@
         android:background="@android:color/transparent"
         android:contentDescription="@string/character_selector_right_button"
         android:src="@drawable/arrow_right"
-        app:layout_constraintBottom_toBottomOf="@+id/select_fighter_name_text_view"
+        app:layout_constraintBottom_toBottomOf="@+id/select_fighter_choose_button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/select_fighter_name_text_view" />
+        app:layout_constraintTop_toTopOf="@+id/select_fighter_choose_button" />
 
     <ImageButton
         android:id="@+id/select_fighter_previous_button"
@@ -71,34 +76,22 @@
         android:background="@android:color/transparent"
         android:contentDescription="@string/character_selector_left_button"
         android:src="@drawable/arrow_left"
-        app:layout_constraintBottom_toBottomOf="@+id/select_fighter_name_text_view"
+        app:layout_constraintBottom_toBottomOf="@+id/select_fighter_choose_button"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/select_fighter_name_text_view" />
+        app:layout_constraintTop_toTopOf="@+id/select_fighter_choose_button" />
 
     <Button
         android:id="@+id/select_fighter_choose_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/btn_rounded"
         android:gravity="center|center_vertical"
         android:text="@string/choose"
         android:textColor="#FFB751"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/marvel"
-        android:gravity="center"
-        android:text="@string/choose_your_hero"
-        android:textColor="#FFFFFF"
-        android:textSize="70sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
