--- a/app/src/main/res/layout/view_stats.xml
+++ b/app/src/main/res/layout/view_stats.xml
@@ -3,8 +3,8 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-
-    android:background="@android:color/transparent">
+    android:backgroundTint="@color/transparentGray"
+    android:background="@drawable/btn_rounded">
 
 
     <ImageView
