--- a/app/src/main/res/layout-land/fragment_dice.xml
+++ b/app/src/main/res/layout-land/fragment_dice.xml
@@ -11,230 +11,241 @@
         android:id="@+id/dice_player_display_name_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="40dp"
         android:text="@string/ant_man"
         android:textSize="30sp"
+        app:layout_constraintBottom_toTopOf="@+id/dice_fighter_top_left_stats_view"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/guideline"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
         android:id="@+id/dice_img_btn_dice_1"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_margin="1dp"
-        android:layout_marginTop="8dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:background="@android:color/transparent"
         android:contentDescription="@string/img_desc_Dice"
         android:scaleType="fitXY"
-        android:tint="#80BBBBBB"
-        app:layout_constraintEnd_toStartOf="@+id/dice_img_btn_dice_2"
-        app:layout_constraintHorizontal_bias="0.5"
+        android:scaleX="1"
+        android:scaleY="1"
+
+        app:layout_constraintBottom_toBottomOf="@+id/dice_img_btn_dice_2"
+        app:layout_constraintEnd_toStartOf="@id/dice_img_btn_dice_2"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/dice_img_btn_dice_2"
         tools:src="@drawable/bolt" />
 
     <ImageButton
         android:id="@+id/dice_img_btn_dice_2"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_margin="1dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:background="@android:color/transparent"
         android:contentDescription="@string/img_desc_Dice"
         android:scaleType="fitXY"
-        android:tint="#80BBBBBB"
-        app:layout_constraintEnd_toStartOf="@+id/dice_img_btn_dice_3"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/dice_img_btn_dice_1"
+        android:scaleX="1"
+        android:scaleY="1"
+        app:layout_constraintBottom_toTopOf="@id/dice_img_btn_dice_5"
+        app:layout_constraintEnd_toStartOf="@id/dice_img_btn_dice_3"
+        app:layout_constraintStart_toEndOf="@id/dice_img_btn_dice_1"
         app:layout_constraintTop_toTopOf="parent"
         tools:src="@drawable/bolt" />
 
     <ImageButton
         android:id="@+id/dice_img_btn_dice_3"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_margin="1dp"
-        android:layout_marginTop="8dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:background="@android:color/transparent"
         android:contentDescription="@string/img_desc_Dice"
         android:scaleType="fitXY"
-        android:tint="#80BBBBBB"
-        app:layout_constraintEnd_toStartOf="@+id/guideline"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/dice_img_btn_dice_2"
-        app:layout_constraintTop_toTopOf="parent"
+        android:scaleX="1"
+        android:scaleY="1"
+        app:layout_constraintBottom_toBottomOf="@+id/dice_img_btn_dice_2"
+        app:layout_constraintEnd_toStartOf="@id/guideline"
+        app:layout_constraintStart_toEndOf="@id/dice_img_btn_dice_2"
+        app:layout_constraintTop_toTopOf="@+id/dice_img_btn_dice_2"
         tools:src="@drawable/bolt" />
 
     <ImageButton
         android:id="@+id/dice_img_btn_dice_4"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_margin="1dp"
+        android:layout_height="wrap_content"
         android:background="@android:color/transparent"
         android:contentDescription="@string/img_desc_Dice"
         android:scaleType="fitXY"
-        android:tint="#80BBBBBB"
-        app:layout_constraintEnd_toStartOf="@+id/dice_img_btn_dice_5"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dice_img_btn_dice_1"
+        android:scaleX="1"
+        android:scaleY="1"
+        app:layout_constraintBottom_toBottomOf="@+id/dice_img_btn_dice_5"
+        app:layout_constraintEnd_toEndOf="@id/dice_img_btn_dice_1"
+        app:layout_constraintStart_toStartOf="@id/dice_img_btn_dice_1"
+        app:layout_constraintTop_toTopOf="@+id/dice_img_btn_dice_5"
         tools:src="@drawable/bolt" />
 
     <ImageButton
         android:id="@+id/dice_img_btn_dice_5"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_margin="1dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
         android:background="@android:color/transparent"
         android:contentDescription="@string/img_desc_Dice"
         android:scaleType="fitXY"
-        android:tint="#80BBBBBB"
-        app:layout_constraintEnd_toStartOf="@+id/dice_img_btn_dice_6"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/dice_img_btn_dice_4"
-        app:layout_constraintTop_toBottomOf="@+id/dice_img_btn_dice_2"
+        android:scaleX="1"
+        android:scaleY="1"
+        app:layout_constraintBottom_toTopOf="@id/dice_btn_throw"
+        app:layout_constraintEnd_toEndOf="@id/dice_img_btn_dice_2"
+        app:layout_constraintStart_toStartOf="@id/dice_img_btn_dice_2"
+        app:layout_constraintTop_toBottomOf="@id/dice_img_btn_dice_2"
         tools:src="@drawable/bolt" />
 
     <ImageButton
         android:id="@+id/dice_img_btn_dice_6"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_margin="1dp"
+        android:layout_height="wrap_content"
         android:background="@android:color/transparent"
         android:contentDescription="@string/img_desc_Dice"
         android:scaleType="fitXY"
-        android:tint="#80BBBBBB"
-        app:layout_constraintEnd_toStartOf="@+id/guideline"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/dice_img_btn_dice_5"
-        app:layout_constraintTop_toBottomOf="@+id/dice_img_btn_dice_3"
+        android:scaleX="1"
+        android:scaleY="1"
+        app:layout_constraintBottom_toBottomOf="@+id/dice_img_btn_dice_5"
+        app:layout_constraintEnd_toEndOf="@id/dice_img_btn_dice_3"
+        app:layout_constraintStart_toStartOf="@id/dice_img_btn_dice_3"
+        app:layout_constraintTop_toTopOf="@+id/dice_img_btn_dice_5"
         tools:src="@drawable/bolt" />
 
     <TextView
         android:id="@+id/dice_fighter_top_left_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:fontFamily="@font/marvel"
         android:text="@string/ant_man"
         android:textColor="#FFFFFF"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@id/dice_fighter_top_left_stats_view"
-        app:layout_constraintEnd_toStartOf="@+id/dice_fighter_top_right_text_view"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/dice_img_btn_dice_4"
-        app:layout_constraintStart_toStartOf="@+id/guideline"
-        app:layout_constraintTop_toBottomOf="@+id/dice_player_display_name_text_view" />
+        app:layout_constraintBottom_toTopOf="@+id/dice_fighter_top_left_stats_view"
+        app:layout_constraintEnd_toEndOf="@+id/dice_fighter_top_left_stats_view"
+        app:layout_constraintStart_toStartOf="@+id/dice_fighter_top_left_stats_view" />
 
     <fr.learnandrun.kingofheroes.ui.view.StatsView
         android:id="@+id/dice_fighter_top_left_stats_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="@+id/dice_fighter_top_left_text_view"
-        app:layout_constraintStart_toStartOf="@+id/dice_fighter_top_left_text_view"
-        app:layout_constraintTop_toBottomOf="@id/dice_fighter_top_left_text_view" />
+        android:layout_marginBottom="40dp"
+        app:layout_constraintBottom_toTopOf="@+id/dice_fighter_bottom_left_stats_view"
+        app:layout_constraintEnd_toStartOf="@+id/dice_fighter_top_right_stats_view"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/guideline"
+        app:layout_constraintStart_toStartOf="@+id/guideline"
+        app:layout_constraintTop_toBottomOf="@+id/dice_player_display_name_text_view" />
 
     <TextView
         android:id="@+id/dice_fighter_top_right_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginBottom="8dp"
         android:fontFamily="@font/marvel"
         android:text="@string/ant_man"
         android:textColor="#FFFFFF"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@id/dice_fighter_top_left_text_view"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/dice_fighter_top_left_text_view"
-        app:layout_constraintTop_toBottomOf="@+id/dice_player_display_name_text_view" />
+        app:layout_constraintBottom_toTopOf="@+id/dice_fighter_top_right_stats_view"
+        app:layout_constraintEnd_toEndOf="@+id/dice_fighter_top_right_stats_view"
+        app:layout_constraintStart_toStartOf="@+id/dice_fighter_top_right_stats_view" />
 
     <fr.learnandrun.kingofheroes.ui.view.StatsView
         android:id="@+id/dice_fighter_top_right_stats_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="@+id/dice_fighter_top_right_text_view"
-        app:layout_constraintStart_toStartOf="@+id/dice_fighter_top_right_text_view"
+        app:layout_constraintBottom_toBottomOf="@+id/dice_fighter_top_left_stats_view"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/dice_fighter_top_left_stats_view"
         app:layout_constraintTop_toTopOf="@+id/dice_fighter_top_left_stats_view" />
 
     <TextView
         android:id="@+id/dice_fighter_bottom_right_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="8dp"
         android:fontFamily="@font/marvel"
         android:text="@string/ant_man"
         android:textColor="#FFFFFF"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@id/dice_fighter_top_right_text_view"
-        app:layout_constraintStart_toStartOf="@+id/dice_fighter_top_right_text_view" />
+        app:layout_constraintBottom_toTopOf="@+id/dice_fighter_bottom_right_stats_view"
+        app:layout_constraintEnd_toEndOf="@+id/dice_fighter_bottom_right_stats_view"
+        app:layout_constraintStart_toStartOf="@+id/dice_fighter_bottom_right_stats_view" />
 
     <fr.learnandrun.kingofheroes.ui.view.StatsView
         android:id="@+id/dice_fighter_bottom_right_stats_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="@id/dice_fighter_bottom_left_stats_view"
-        app:layout_constraintEnd_toEndOf="@id/dice_fighter_bottom_right_text_view"
-        app:layout_constraintStart_toStartOf="@id/dice_fighter_bottom_right_text_view" />
+        app:layout_constraintBottom_toBottomOf="@+id/dice_fighter_bottom_left_stats_view"
+        app:layout_constraintEnd_toEndOf="@+id/dice_fighter_top_right_stats_view"
+        app:layout_constraintStart_toStartOf="@+id/dice_fighter_top_right_stats_view"
+        app:layout_constraintTop_toTopOf="@+id/dice_fighter_bottom_left_stats_view" />
 
     <TextView
         android:id="@+id/dice_fighter_bottom_left_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="8dp"
         android:fontFamily="@font/marvel"
         android:text="@string/ant_man"
         android:textColor="#FFFFFF"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@id/dice_fighter_top_left_text_view"
-        app:layout_constraintStart_toStartOf="@id/dice_fighter_top_left_text_view" />
+        app:layout_constraintBottom_toTopOf="@+id/dice_fighter_bottom_left_stats_view"
+        app:layout_constraintEnd_toEndOf="@+id/dice_fighter_bottom_left_stats_view"
+        app:layout_constraintStart_toStartOf="@+id/dice_fighter_bottom_left_stats_view" />
 
     <fr.learnandrun.kingofheroes.ui.view.StatsView
         android:id="@+id/dice_fighter_bottom_left_stats_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/dice_fighter_bottom_left_text_view"
-        app:layout_constraintEnd_toEndOf="@id/dice_fighter_bottom_left_text_view"
-        app:layout_constraintStart_toStartOf="@id/dice_fighter_bottom_left_text_view" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/dice_fighter_top_left_stats_view"
+        app:layout_constraintStart_toStartOf="@+id/dice_fighter_top_left_stats_view"
+        app:layout_constraintTop_toBottomOf="@+id/dice_fighter_top_left_stats_view" />
 
 
     <Button
         android:id="@+id/dice_btn_throw"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
         android:background="@drawable/btn_rounded"
         android:fontFamily="@font/marvel"
         android:padding="10dp"
         android:text="@string/btn_throw"
         android:textColor="#FFB751"
         android:textSize="40sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/dice_turn_text_view"
         app:layout_constraintEnd_toStartOf="@+id/guideline"
-        app:layout_constraintTop_toBottomOf="@+id/dice_img_btn_dice_5" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/dice_turn_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="15dp"
         android:fontFamily="@font/marvel"
         android:text="@string/dice_turn"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="@+id/dice_btn_throw"
-        app:layout_constraintEnd_toStartOf="@+id/dice_btn_throw"
-        app:layout_constraintHorizontal_bias="0.6"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/dice_btn_throw" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/dice_btn_throw"
+        app:layout_constraintStart_toStartOf="@+id/dice_btn_throw" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.6" />
+        app:layout_constraintEnd_toStartOf="@+id/dice_fighter_top_left_stats_view"
+        app:layout_constraintGuide_percent="0.6"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
