[Business] Fix + layout + winner screen + diceRollRemaining

--- a/app/src/main/res/layout/fragment_dice.xml
+++ b/app/src/main/res/layout/fragment_dice.xml
@@ -17,107 +17,118 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/dice_img_btn_dice_1"
+        app:layout_constraintBottom_toTopOf="@id/dice_img_btn_dice_2"
         />
 
     <ImageButton
         android:id="@+id/dice_img_btn_dice_1"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:scaleType="fitXY"
-        android:layout_margin="1dp"
+        android:scaleType="centerInside"
+        android:adjustViewBounds="true"
         tools:src="@drawable/bolt"
         android:background="@android:color/transparent"
         android:contentDescription="@string/img_desc_Dice"
-        app:layout_constraintTop_toBottomOf="@id/dice_player_display_name_text_view"
+
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/dice_img_btn_dice_2"
-        app:layout_constraintBottom_toTopOf="@id/dice_img_btn_dice_4"/>
+        app:layout_constraintTop_toTopOf="@id/dice_img_btn_dice_2"
+        app:layout_constraintEnd_toStartOf="@id/dice_img_btn_dice_2"
+        app:layout_constraintBottom_toBottomOf="@id/dice_img_btn_dice_2"
+        />
 
     <ImageButton
         android:id="@+id/dice_img_btn_dice_2"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:scaleType="fitXY"
-        android:layout_margin="1dp"
         android:background="@android:color/transparent"
         android:contentDescription="@string/img_desc_Dice"
+        android:scaleType="centerInside"
+        android:adjustViewBounds="true"
         tools:src="@drawable/bolt"
-        app:layout_constraintTop_toTopOf="@+id/dice_img_btn_dice_1"
-        app:layout_constraintStart_toEndOf="@+id/dice_img_btn_dice_1"
-        app:layout_constraintEnd_toStartOf="@+id/dice_img_btn_dice_3"
-        app:layout_constraintBottom_toBottomOf="@+id/dice_img_btn_dice_1" />
+        app:layout_constraintTop_toBottomOf="@id/dice_player_display_name_text_view"
+        app:layout_constraintStart_toEndOf="@id/dice_img_btn_dice_1"
+        app:layout_constraintEnd_toStartOf="@id/dice_img_btn_dice_3"
+        app:layout_constraintBottom_toTopOf="@id/dice_img_btn_dice_5"
+        />
 
     <ImageButton
         android:id="@+id/dice_img_btn_dice_3"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:scaleType="fitXY"
-        android:layout_margin="1dp"
+        android:scaleType="centerInside"
+        android:adjustViewBounds="true"
         android:background="@android:color/transparent"
         android:contentDescription="@string/img_desc_Dice"
         tools:src="@drawable/bolt"
-        app:layout_constraintTop_toTopOf="@+id/dice_img_btn_dice_2"
-        app:layout_constraintStart_toEndOf="@+id/dice_img_btn_dice_2"
+
+        app:layout_constraintTop_toTopOf="@id/dice_img_btn_dice_2"
+        app:layout_constraintStart_toEndOf="@id/dice_img_btn_dice_2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="@+id/dice_img_btn_dice_2" />
+        app:layout_constraintBottom_toBottomOf="@id/dice_img_btn_dice_2"
+        />
 
     <ImageButton
         android:id="@+id/dice_img_btn_dice_4"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:scaleType="fitXY"
-        android:layout_margin="1dp"
+        android:scaleType="centerInside"
+        android:adjustViewBounds="true"
         android:background="@android:color/transparent"
         android:contentDescription="@string/img_desc_Dice"
         tools:src="@drawable/bolt"
-        app:layout_constraintTop_toBottomOf="@+id/dice_img_btn_dice_1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/dice_img_btn_dice_5"
-        app:layout_constraintBottom_toTopOf="@id/dice_fighter_top_left_text_view"/>
+
+        app:layout_constraintTop_toTopOf="@id/dice_img_btn_dice_5"
+        app:layout_constraintStart_toStartOf="@id/dice_img_btn_dice_1"
+        app:layout_constraintEnd_toEndOf="@id/dice_img_btn_dice_1"
+        app:layout_constraintBottom_toBottomOf="@id/dice_img_btn_dice_5"
+        />
 
     <ImageButton
         android:id="@+id/dice_img_btn_dice_5"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:scaleType="fitXY"
-        android:layout_margin="1dp"
+        android:scaleType="centerInside"
+        android:adjustViewBounds="true"
         android:background="@android:color/transparent"
         android:contentDescription="@string/img_desc_Dice"
         tools:src="@drawable/bolt"
-        app:layout_constraintTop_toTopOf="@+id/dice_img_btn_dice_4"
-        app:layout_constraintStart_toEndOf="@+id/dice_img_btn_dice_4"
-        app:layout_constraintEnd_toStartOf="@+id/dice_img_btn_dice_6"
-        app:layout_constraintBottom_toBottomOf="@+id/dice_img_btn_dice_4" />
+
+        app:layout_constraintTop_toBottomOf="@id/dice_img_btn_dice_2"
+        app:layout_constraintStart_toStartOf="@id/dice_img_btn_dice_2"
+        app:layout_constraintEnd_toEndOf="@id/dice_img_btn_dice_2"
+        app:layout_constraintBottom_toTopOf="@id/dice_fighter_top_left_text_view"
+        />
 
     <ImageButton
         android:id="@+id/dice_img_btn_dice_6"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:scaleType="fitXY"
-        android:layout_margin="1dp"
+        android:scaleType="centerInside"
+        android:adjustViewBounds="true"
         android:background="@android:color/transparent"
         android:contentDescription="@string/img_desc_Dice"
-        app:layout_constraintBottom_toBottomOf="@+id/dice_img_btn_dice_5"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/dice_img_btn_dice_5"
-        app:layout_constraintTop_toTopOf="@+id/dice_img_btn_dice_5"
-        tools:src="@drawable/bolt" />
+        tools:src="@drawable/bolt"
+
+        app:layout_constraintTop_toTopOf="@id/dice_img_btn_dice_5"
+        app:layout_constraintStart_toStartOf="@id/dice_img_btn_dice_3"
+        app:layout_constraintEnd_toEndOf="@id/dice_img_btn_dice_3"
+        app:layout_constraintBottom_toBottomOf="@id/dice_img_btn_dice_5"
+        />
 
     <TextView
         android:id="@+id/dice_fighter_top_left_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:layout_marginBottom="8dp"
         android:fontFamily="@font/marvel"
         android:text="@string/ant_man"
         android:textColor="#FFFFFF"
         android:textSize="18sp"
-        app:layout_constraintTop_toBottomOf="@+id/dice_img_btn_dice_4"
-        app:layout_constraintStart_toStartOf="@id/dice_fighter_top_left_stats_view"
+        app:layout_constraintBottom_toTopOf="@id/dice_fighter_top_left_stats_view"
         app:layout_constraintEnd_toEndOf="@+id/dice_fighter_top_left_stats_view"
-        app:layout_constraintBottom_toTopOf="@id/dice_fighter_top_left_stats_view"/>
+        app:layout_constraintStart_toStartOf="@id/dice_fighter_top_left_stats_view"
+        app:layout_constraintTop_toBottomOf="@+id/dice_img_btn_dice_5" />
 
     <fr.learnandrun.kingofheroes.ui.view.StatsView
         android:id="@+id/dice_fighter_top_left_stats_view"
@@ -176,15 +187,16 @@
         android:id="@+id/dice_fighter_bottom_left_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="8dp"
         android:fontFamily="@font/marvel"
         android:text="@string/ant_man"
         android:textColor="#FFFFFF"
-        android:layout_marginTop="16dp"
         android:textSize="18sp"
-        app:layout_constraintTop_toBottomOf="@id/dice_fighter_top_left_stats_view"
-        app:layout_constraintStart_toStartOf="@id/dice_fighter_top_left_text_view"
+        app:layout_constraintBottom_toTopOf="@id/dice_fighter_bottom_left_stats_view"
         app:layout_constraintEnd_toEndOf="@id/dice_fighter_top_left_text_view"
-        app:layout_constraintBottom_toTopOf="@id/dice_fighter_bottom_left_stats_view"/>
+        app:layout_constraintStart_toStartOf="@id/dice_fighter_top_left_text_view"
+        app:layout_constraintTop_toBottomOf="@id/dice_fighter_top_left_stats_view" />
 
     <fr.learnandrun.kingofheroes.ui.view.StatsView
         android:id="@+id/dice_fighter_bottom_left_stats_view"
