--- a/app/src/main/res/layout-land/fragment_shop.xml
+++ b/app/src/main/res/layout-land/fragment_shop.xml
@@ -11,19 +11,19 @@
         android:id="@+id/shop_buy_label_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:fontFamily="@font/marvel"
         android:text="@string/shop_buy"
         android:textSize="50sp"
         app:layout_constraintBottom_toTopOf="@+id/shop_secund_attack_btn"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
         android:id="@+id/shop_first_attack_btn"
-        android:layout_width="200dp"
-        android:layout_height="280dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:background="@android:color/transparent"
         android:contentDescription="@string/img_desc_card_power"
         android:scaleType="fitCenter"
@@ -36,14 +36,13 @@
 
     <ImageButton
         android:id="@+id/shop_secund_attack_btn"
-        android:layout_width="200dp"
-        android:layout_height="280dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:background="@android:color/transparent"
         android:contentDescription="@string/img_desc_card_power"
         android:scaleType="fitCenter"
         android:src="@drawable/groot_attack"
         app:layout_constraintBottom_toTopOf="@+id/shop_pass_btn"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/shop_third_attack_btn"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/shop_first_attack_btn"
@@ -51,8 +50,8 @@
 
     <ImageButton
         android:id="@+id/shop_third_attack_btn"
-        android:layout_width="200dp"
-        android:layout_height="280dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:background="@android:color/transparent"
         android:contentDescription="@string/img_desc_card_power"
         android:scaleType="fitCenter"
@@ -67,6 +66,8 @@
         android:id="@+id/shop_pass_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/btn_rounded"
         android:fontFamily="@font/marvel"
         android:padding="10dp"
@@ -75,8 +76,31 @@
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/shop_secund_attack_btn" />
+
+    <ImageView
+        android:id="@+id/fragment_shop_stamina_image_view"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:contentDescription="@string/stamina_logo"
+        android:src="@drawable/stamina"
+        app:layout_constraintBottom_toBottomOf="@+id/shop_pass_btn"
+        app:layout_constraintEnd_toStartOf="@+id/fragment_shop_stamina_text_value"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toEndOf="@+id/shop_pass_btn"
+        app:layout_constraintTop_toTopOf="@+id/shop_pass_btn" />
+
+    <TextView
+        android:id="@+id/fragment_shop_stamina_text_value"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/fragment_shop_stamina_image_view"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/fragment_shop_stamina_image_view"
+        app:layout_constraintTop_toTopOf="@+id/fragment_shop_stamina_image_view" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
