--- a/app/src/main/res/layout-land/fragment_final_screen.xml
+++ b/app/src/main/res/layout-land/fragment_final_screen.xml
@@ -10,7 +10,7 @@
 
     <TextView
         android:id="@+id/final_screen_title_text_view"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:fontFamily="@font/marvel"
