--- a/app/src/main/res/layout-land/fragment_dice.xml
+++ b/app/src/main/res/layout-land/fragment_dice.xml
@@ -14,17 +14,16 @@
         android:layout_marginTop="20dp"
         android:layout_marginBottom="40dp"
         android:text="@string/ant_man"
-        android:textSize="30sp"
+        android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/dice_fighter_top_left_stats_view"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/guideline"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
         android:id="@+id/dice_img_btn_dice_1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginStart="8dp"
         android:background="@android:color/transparent"
         android:contentDescription="@string/img_desc_Dice"
@@ -40,8 +39,8 @@
 
     <ImageButton
         android:id="@+id/dice_img_btn_dice_2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
@@ -58,8 +57,8 @@
 
     <ImageButton
         android:id="@+id/dice_img_btn_dice_3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginEnd="8dp"
         android:background="@android:color/transparent"
         android:contentDescription="@string/img_desc_Dice"
@@ -74,8 +73,8 @@
 
     <ImageButton
         android:id="@+id/dice_img_btn_dice_4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:background="@android:color/transparent"
         android:contentDescription="@string/img_desc_Dice"
         android:scaleType="fitXY"
@@ -89,8 +88,8 @@
 
     <ImageButton
         android:id="@+id/dice_img_btn_dice_5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginBottom="10dp"
         android:background="@android:color/transparent"
         android:contentDescription="@string/img_desc_Dice"
@@ -105,8 +104,8 @@
 
     <ImageButton
         android:id="@+id/dice_img_btn_dice_6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:background="@android:color/transparent"
         android:contentDescription="@string/img_desc_Dice"
         android:scaleType="fitXY"
@@ -244,7 +243,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintEnd_toStartOf="@+id/dice_fighter_top_left_stats_view"
-        app:layout_constraintGuide_percent="0.6"
+        app:layout_constraintGuide_percent="0.55"
         app:layout_constraintStart_toStartOf="parent" />
 
 
