--- a/app/src/main/res/layout/fragment_select_fighter.xml
+++ b/app/src/main/res/layout/fragment_select_fighter.xml
@@ -10,23 +10,24 @@
 
     <TextView
         android:id="@+id/select_fighter_name_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_width="4dp"
+        android:layout_height="32dp"
+        android:layout_marginBottom="24dp"
         android:fontFamily="@font/marvel"
         android:textColor="#FFFFFF"
         android:textSize="30sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/select_fighter_choose_button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/select_fighter_center_image_view" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
         android:id="@+id/select_fighter_center_image_view"
         android:layout_width="280dp"
-        android:layout_height="350dp"
+        android:layout_height="0dp"
         android:contentDescription="@string/img_desc_card_fighter"
         android:src="@drawable/ant_man"
+        app:layout_constraintBottom_toTopOf="@+id/select_fighter_name_text_view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -56,10 +57,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
+        android:layout_marginBottom="11dp"
         android:background="@android:color/transparent"
         android:contentDescription="@string/character_selector_right_button"
         android:src="@drawable/arrow_right"
-        app:layout_constraintBottom_toBottomOf="@+id/select_fighter_name_text_view"
+        app:layout_constraintBottom_toBottomOf="@+id/select_fighter_choose_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/select_fighter_name_text_view" />
 
@@ -71,7 +73,7 @@
         android:background="@android:color/transparent"
         android:contentDescription="@string/character_selector_left_button"
         android:src="@drawable/arrow_left"
-        app:layout_constraintBottom_toBottomOf="@+id/select_fighter_name_text_view"
+        app:layout_constraintBottom_toBottomOf="@+id/select_fighter_choose_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/select_fighter_name_text_view" />
 
@@ -86,6 +88,7 @@
         android:textColor="#FFB751"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.52"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
