[Language] Add french

--- a/app/src/main/res/layout/fragment_select_fighter.xml
+++ b/app/src/main/res/layout/fragment_select_fighter.xml
@@ -10,8 +10,8 @@
 
     <TextView
         android:id="@+id/select_fighter_name_text_view"
-        android:layout_width="4dp"
-        android:layout_height="32dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
         android:fontFamily="@font/marvel"
         android:textColor="#FFFFFF"
