--- a/app/src/main/res/layout/fragment_shop.xml
+++ b/app/src/main/res/layout/fragment_shop.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/marvel"
         android:text="@string/shop_buy"
+        android:textAlignment="center"
         android:textSize="50sp"
         app:layout_constraintBottom_toTopOf="@+id/shop_first_attack_btn"
         app:layout_constraintEnd_toEndOf="parent"
