[FinalScreen] Center final text in landscape mode

--- a/app/src/main/res/layout-land/fragment_final_screen.xml
+++ b/app/src/main/res/layout-land/fragment_final_screen.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:fontFamily="@font/marvel"
+        android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textSize="60sp"
         app:layout_constraintBottom_toTopOf="@id/final_screen_replay_button"
